# DemonEngine

./: CMakeLists.txt  vcpkg.json
assets/package0/script/: test.cs
assets/package0/shader/fsh/: Shader.fsh
assets/package0/shader/vsh/: Shader.vsh
assets/shader/skybox/: staticSkyBoxNormalShader.fsh  staticSkyBoxNormalShader.vsh
engine/source/core/assets/: AssetType.hpp  AssetsMainManager.cpp  AssetsMainManager.hpp  AssetsManager.hpp  ConfigManager.cpp  ConfigManager.hpp  MaterialsManager.cpp  MaterialsManager.hpp  MediaManager.hpp  ModelManager.cpp  ModelManager.hpp  ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp
engine/source/core/assets/interface/: IDataManager.hpp  IFileLoader.hpp  IFileManager.hpp
engine/source/core/assets/manager/: AssetsDataMainManager.cpp  AssetsDataMainManager.hpp  AssetsMainManager.cpp  AssetsMainManager.hpp  ConfigManager.cpp  ConfigManager.hpp  MaterialsManager.cpp  MaterialsManager.hpp  MediaManager.cpp  MediaManager.hpp  ModelManager.cpp  ModelManager.hpp  SceneManager.cpp  ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp
engine/source/core/assets/manager/data/: ConfigManager.cpp  ConfigManager.hpp  MaterialsManager.cpp  MaterialsManager.hpp  MediaManager.cpp  MediaManager.hpp  ModelManager.cpp  ModelManager.hpp  RenderableObjectManager.cpp  RenderableObjectManager.hpp  SceneManager.hpp  ScriptManager.cpp  ScriptManager.hpp  ShaderManager.cpp  ShaderManager.hpp  SkyBoxManager.cpp  SkyBoxManager.hpp  TextureManager.cpp  TextureManager.hpp
engine/source/core/assets/manager/loader/: AssimpLoader.cpp  AssimpLoader.hpp  ConfigLoader.cpp  ConfigLoader.hpp  RenderObjectLoader.cpp  RenderObjectLoader.hpp  ScriptLoader.cpp  ScriptLoader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  SkyBoxLoader.cpp  SkyBoxLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
engine/source/core/assets/manager/type/: AssimpLoader.cpp  AssimpLoader.hpp  ConfigLoader.cpp  ConfigLoader.hpp  ShaderLoader.cpp  ShaderLoader.hpp
engine/source/core/assets/scene/: CameraEntity.cpp  CameraEntity.hpp  Effect.cpp  Effect.hpp  Entity.cpp  Entity.hpp  LightEntity.cpp  LightEntity.hpp  Scene.cpp  Scene.hpp  SceneGroup.cpp  SceneGroup.hpp  Skybox.cpp  Skybox.hpp  SkyboxEntity.cpp  SkyboxEntity.hpp
engine/source/core/base/common/: Application.cpp  Application.hpp  ITransformable.hpp  Metadata.hpp  Object.hpp  Transform.hpp  UUID.hpp
engine/source/core/base/common/manager/: UUIDManager.cpp  UUIDManager.hpp
engine/source/core/base/interface/: Application.cpp  Application.hpp  BlockOperator.hpp  IMetaAccessor.cpp  IMetaAccessor.hpp  INameable.hpp  IRenderUpadtable.hpp  IRenderable.hpp  ISkyBox.hpp  ITransformable.hpp  ITransformableUpdate.hpp  IUpdatable.hpp  Initializer.hpp  Interface.hpp
engine/source/core/base/lib/: BoolDefine.hpp  glad.c  pch.hpp  stb_image.cpp
engine/source/core/base/render/: Animation.hpp  AnimationBone.hpp  Animator.hpp  Bone.hpp  Camera.hpp  Light.cpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelBone.hpp  RenderableObject.cpp  RenderableObject.hpp  Shader.cpp  Shader.hpp  Texture.hpp  Vertex.hpp
engine/source/core/base/utils/: UUIDUtil.hpp
engine/source/core/event/base/: EventBus.cpp  EventBus.hpp
engine/source/core/event/interface/: IEvent.hpp  IEventBus.hpp  IEventListener.hpp
engine/source/core/io/: FileSystem.hpp  FileType.hpp
engine/source/core/io/config/: JsonConfiguration.cpp  JsonConfiguration.hpp  XmlConfiguration.cpp  XmlConfiguration.hpp  YamlConfiguration.cpp  YamlConfiguration.hpp
engine/source/core/io/file/: SceneFile.cpp  SceneFile.hpp
engine/source/core/io/interface/: IConfigurable.hpp  IConfiguration.hpp  IConfigurationSection.hpp  IFile.hpp  ISerializable.hpp
engine/source/core/render/graphApi/: GraphApi.hpp  OpenGLApi.cpp  OpenGLApi.hpp  OpenglApi.cpp  OpenglApi.hpp
engine/source/core/render/manager/: AnimationValueDefine.hpp  GLFWWindowFactory.cpp  GLFWWindowFactory.hpp  Initializer.hpp  OpenGLInitializer.cpp  OpenGLInitializer.hpp  RenderManager.cpp  RenderManager.hpp  WindowFactory.cpp  WindowFactory.hpp
engine/source/core/render/pipeline/: DrawCall.cpp  DrawCall.hpp  OpenglDrawCall.cpp  OpenglDrawCall.hpp  ProgrammablePipeline.cpp  ProgrammablePipeline.hpp  RenderManager.hpp  RenderPipeline.hpp
engine/source/core/script/: MonoScriptThread.cpp  MonoScriptThread.hpp  ScriptEntity.cpp  ScriptEntity.hpp  ScriptInitializer.hpp  ScriptMethodType.hpp
engine/source/core/script/entity/: AssemblyScriptEntity.cpp  AssemblyScriptEntity.hpp
engine/source/core/script/interface/: IScriptEntity.hpp  IScriptPipline.hpp  IScriptRuntimeThread.hpp
engine/source/core/script/pipline/: AsyncAssemblyScriptPipLine.cpp  AsyncAssemblyScriptPipLine.hpp  AsyncScriptPipLine.cpp  AsyncScriptPipLine.hpp  SerialAssemblyScriptPipLine.cpp  SerialAssemblyScriptPipLine.hpp  SerialScriptPipLine.cpp  SerialScriptPipLine.hpp
engine/source/core/script/thread/: MonoAssemblyCompileThread.cpp  MonoAssemblyCompileThread.hpp  MonoThread.cpp  MonoThread.hpp
engine/source/editor/: main.cpp
engine/source/editor/common/: BaseApplication.cpp  BaseApplication.h  EmptyApplication.cpp
engine/source/editor/interface/: Application.h  Application.hpp  Interface.hpp  RuntimeModule.h  RuntimeModule.hpp
engine/source/editor/openglTest/: LightingTest.cpp  ModelTest.cpp  OpenGlTest.cpp  Shader.cpp  Shader.hpp
engine/source/editor/openglTest/base/: Camera.hpp  FileSystem.hpp  Mesh.hpp  Shader.hpp  root_directory.h
engine/source/editor/platform/windows/: DemonEngineOpenGL.cpp  math.hpp
engine/source/runtime/: main.cpp
engine/source/runtime/base/: RuntimeApplication.cpp  RuntimeApplication.hpp
include/glad/: glad.h
lib/: yaml-cpp.lib
outdated/: main.cpp
outdated/common/: BaseApplication.cpp  BaseApplication.hpp  GraphicsManager.cpp  GraphicsManager.hpp
outdated/openglTest/: LightingTest.cpp  glad.c
outdated/openglTest/base/: Camera.hpp  FileSystem.hpp  Model.hpp  Shader.hpp  root_directory.h
outdated/openglTest/shader/vsh/: Color.vsh
(+49 files in other folders)
